--- a/app/src/main/res/layout/activity_profile_details.xml
+++ b/app/src/main/res/layout/activity_profile_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity"
+    tools:context=".ProfileDetailsActivity"
     android:background="@color/osrs_bg"
     >
 
@@ -16,7 +16,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="30dp"
-        android:text="@string/registration_title"
+        android:text="@string/profile_details_title"
         android:textColor="@color/osrs_logo_font_color"
         android:textSize="30sp"
         />
