--- a/app/src/main/res/layout/activity_profile_details.xml
+++ b/app/src/main/res/layout/activity_profile_details.xml
@@ -59,8 +59,10 @@
         android:text="@string/account_name_guidance"
         app:layout_constraintTop_toBottomOf="@id/tv_second_name"
         app:layout_constraintLeft_toRightOf="@id/tv_osrs_acc_name"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="12dp"
+        android:layout_marginRight="5dp"
         android:textColor="@color/osrs_logo_color"
         />
 
