--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -5,72 +5,82 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DashboardActivity">
+    tools:context=".DashboardActivity"
 
-    <TextView
-        android:id="@+id/account_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/account_title"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/tb_layout"
+    >
 
-        />
 
     <TableLayout
 
         android:id="@+id/tb_layout"
         android:stretchColumns="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="100dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:background="@color/osrs_bg"
         >
 
 
         <TableRow
             android:layout_marginTop="20dp"
             android:layout_marginBottom="30dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:background="@color/osrs_logo_font_color"
             >
 
             <TextView
                 android:id="@+id/tv_full_name"
-                android:gravity="center"
-                android:layout_column="1"
+                android:layout_width="200dp"
                 tools:text="Name"
+                android:textColor="@color/osrs_logo_color"
+                android:textSize="15sp"
                 android:padding="20dip" />
 
             <ImageView
-                android:layout_column="1"
+                android:layout_marginRight="90dp"
+                android:id="@+id/iv_account_avatar"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 tools:srcCompat="@tools:sample/avatars" />
 
         </TableRow>
 
-        <TableRow>
+        <TableRow
+            android:background="@color/osrs_logo_font_color"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            >
 
             <TextView
                 android:id="@+id/tv_account_osrs_name"
+                android:layout_width="250dp"
                 android:gravity="center"
-                android:layout_column="1"
-                tools:text="OSRS ACCOUNT NAME"
-                android:padding="20dip" />
+                android:padding="20dip"
+                android:textColor="@color/osrs_logo_color"
+                android:textSize="15sp"
+                tools:text="OSRS ACCOUNT NAME" />
         </TableRow>
 
         <TableRow android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:background="@color/osrs_logo_font_color"
             >
 
             <TextView
                 android:id="@+id/tv_location"
                 android:gravity="center"
-                android:layout_column="1"
                 tools:text="LOCATION"
+                android:textColor="@color/osrs_logo_color"
+                android:textSize="15sp"
                 android:padding="20dip" />
         </TableRow>
 
