--- a/app/src/main/res/layout/activity_display_user.xml
+++ b/app/src/main/res/layout/activity_display_user.xml
@@ -33,12 +33,10 @@
         android:layout_width="match_parent"
         android:layout_height="350dp"
         android:layout_margin="8dp"
-
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_combat"
-
         tools:listitem="@layout/skill_row_item" />
 
     <ProgressBar
