--- a/app/src/main/res/layout/activity_display_user.xml
+++ b/app/src/main/res/layout/activity_display_user.xml
@@ -49,4 +49,60 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
+    <ImageView
+        android:id="@+id/seperator"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@id/rs_stats_rv"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="@color/black"
+        />
+
+    <TextView
+        android:id="@+id/tv_posts_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/posts"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/seperator"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/iv_write_post"
+        />
+
+    <ImageView
+        android:id="@+id/iv_write_post"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:layout_constraintTop_toBottomOf="@id/seperator"
+        app:layout_constraintRight_toLeftOf="@id/iv_record_post"
+        android:src="@drawable/write_icon"
+        />
+    
+    <ImageView
+        android:id="@+id/iv_record_post"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:layout_constraintTop_toBottomOf="@id/seperator"
+        app:layout_constraintRight_toRightOf="parent"
+        android:src="@drawable/record_post"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_posts"
+        android:layout_width="match_parent"
+        android:layout_height="230dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_posts_title"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_margin="8dp"
+        tools:listitem="@layout/post_row_item"
+        />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
