--- a/app/src/main/res/layout/activity_display_user.xml
+++ b/app/src/main/res/layout/activity_display_user.xml
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content"
         android:text="@string/posts"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@id/seperator"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/iv_write_post"
@@ -95,14 +95,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_posts"
         android:layout_width="match_parent"
-        android:layout_height="230dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_posts_title"
+        android:layout_height="150dp"
+        android:layout_margin="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="8dp"
-        tools:listitem="@layout/post_row_item"
-        />
-
+        app:layout_constraintTop_toBottomOf="@id/tv_posts_title"
+        tools:listitem="@layout/post_row_item" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
